# database/models/producType.go
@@ -6,3 +6,7 @@ type ProductType struct {
 	gorm.Model
 	Name string
 }
+
+type ProductTypeResponse struct {
+	Name string
+}
